--- a/web-app/tds/web-app/app-js/shared/components/combo-box/combobox.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/combo-box/combobox.component.html
@@ -14,7 +14,7 @@
         (blur)="onBlur()"
         [suggest]="true"
         [disabled]="disabled"
-        required="required"
+        [required]="required"
         name="testName"
         style="width: 100%;">
     <ng-template kendoComboBoxItemTemplate let-dataItem>
