TM-11703 Fix issue displaying workflow field on task detail view

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -159,7 +159,7 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Workflow</span></label>
                                                     </td>
-                                                    <td class="valueNW"><span>{{model.workflowTransitionName}}</span></td>
+                                                    <td class="valueNW"><span>{{model.workflow || ''}}</span></td>
 
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Duration Delta</span></label>
