--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -24,6 +24,7 @@
     min-width: 769px
     @-moz-document url-prefix()
       display: inline-block
+      min-height: 890px
     .modal-body
       height: 86%
       form
