TM-12096 was added clone functionality for the 4 types of assets

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -24,7 +24,7 @@
           .k-grid
             position: relative
             min-height: 100%
-            max-height: 150px;
+            max-height: 150px
       .no-grow-container
         flex: 0
         .task-details
