--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -11,6 +11,7 @@
 @import "module/assetExplorer/model-device-show.component"
 @import "module/assetExplorer/manufacturer-show.component"
 @import "module/assetExplorer/manufacturer-edit-component"
+@import "module/assetExplorer/asset-clone.component"
 @import "module/dataIngestion/data-script-console-component"
 @import "module/dataIngestion/data-script-view-edit-component"
 @import "module/dataIngestion/data-script-etl-builder-component"
