TM-11703 Displaying double assignment error messages make shorter notes grid

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -457,7 +457,7 @@
                                 <td colspan="5">
                                     <kendo-grid
                                         *ngIf="dataGridTaskNotesHelper"
-                                        class="successor-predecessor-table"
+                                        class="successor-predecessor-table has-double-assignment"
                                         [data]="dataGridTaskNotesHelper.gridData"
                                         [sort]="dataGridTaskNotesHelper.state.sort"
                                         [sortable]="{mode:'single'}"
