--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -60,6 +60,10 @@
             max-height: 160px
 
         table.has-double-assignment
+          kendo-grid.successor-predecessor-table.has-double-assignment
+            max-height: 110px
+
+        table.has-double-assignment
           tr.dependency-error-section.has-double-assignment
             display: block
             td
