--- a/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-etl-builder/data-script-etl-builder.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-etl-builder/data-script-etl-builder.component.html
@@ -4,7 +4,7 @@
         font-size: 17px;
     }
 </style>
-<div class="modal fade in data-script-etl-builder-component tds-ui-modal-decorator" id="etlBuilder" data-backdrop="static" tds-handle-escape (escPressed)="cancelCloseDialog()" tabindex="-1" role="dialog">
+<div class="modal fade in data-script-etl-builder-component tds-ui-modal-decorator" id="etlBuilder" data-backdrop="static" tds-handle-escape (escPressed)="cancelCloseDialog($event)" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-lg" role="document">
 		<div #resizableForm class="modal-content resizable"
              tds-ui-modal-decorator=""
@@ -175,7 +175,7 @@
                                                                        [gridData]="fieldReferencePopupHelper.popup.gridData"
                                                                        [gridGroups]="fieldReferencePopupHelper.popup.gridGroups"
                                                                        [offset]="fieldReferencePopupHelper.popup.offset"
-                                                                       (onClose)="fieldReferencePopupHelper.popup.show = false">
+                                                                       (onClose)="fieldReferencePopupHelper.closePopup($event)">
                                                 </field-reference-popup>
                                                <kendo-grid *ngIf="transformedDataGrids[i]"
                                                            [data]="transformedDataGrids[i].gridData"
