--- a/web-app/tds/web-app/app-js/shared/components/field-reference-popup/field-reference-popup.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/field-reference-popup/field-reference-popup.component.html
@@ -3,9 +3,9 @@
              [popupClass]="'content popup'"
              [offset]="offset"
              [positionMode]="position">
-    <div class="popup-content" tds-handle-escape (escPressed)="onClose()">
+    <div class="field-reference-popup popup-content" tds-handle-escape (escPressed)="onClose($event)">
         <div class="popup-header">
-            <button #focusElement autofocus class="invisible-button"></button>
+            <button #focusElement autofocus [ngClass]="BTN_POPUP_ESC_TRIGGER_CLASS" class="invisible-button"></button>
             <label class="fields-info-popup-label">
                 {{getPopupTitle()}}
             </label>
