TM-11703 Fix linter warning

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -95,7 +95,7 @@
         .dependency-error-section label.has-double-assignment
           font-weight: normal
           color: $color-message-error--red
-        .has-double-assignment
+        label.has-double-assignment
           width: 100%
           text-align: center
         .duplicate-error
