--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -70,6 +70,29 @@
 		</ng-template>
 	</kendo-grid-column>
 
+	<!-- Action -->
+	<kendo-grid-command-column [width]="150">
+		<ng-template kendoGridHeaderTemplate>
+			<div class="text-center">
+				<label class="action-header"> {{ 'GLOBAL.ACTION' | translate }} </label>
+			</div>
+		</ng-template>
+		<ng-template kendoGridCellTemplate let-dataItem>
+			<div class="text-center">
+				<button class="btn btn-action btn-default"
+						title="Create Comment or Show Comments"
+						(click)="showComment(dataItem)">
+					<span class="fa fa-fw fa-comment"></span>
+				</button>
+				<button class="btn btn-action btn-default"
+						title="Create Comment or Show Comments"
+						(click)="createComment(dataItem)">
+					<span class="fa fa-fw fa-comments"></span>
+				</button>
+			</div>
+		</ng-template>
+	</kendo-grid-command-column>
+
     <!-- Configured View Columns (*ngFor) -->
 	<kendo-grid-column *ngFor="let column of model.columns; let i = index" [locked]="column.locked" field="{{column.domain}}_{{column.property}}"
 	 [minResizableWidth]="VIEW_COLUMN_MIN_WIDTH" [width]="column.width" [class]="column.domain">
